--- a/pandas/pandas_test.ipynb
+++ b/pandas/pandas_test.ipynb
@@ -5703,25 +5703,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('foo.csv') # csv로 저장"
+    "df.to_csv('foo.csv')          # csv로 저장(df.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('user.csv') # csv파일 읽어오기"
+    "df1 = pd.read_csv('user.csv') # csv파일 읽어오기(pd.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -5776,13 +5776,91 @@
        "1    kim       김철수        33   010-3333-4444"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: SQLAlchemy\n",
+      "Version: 1.3.9\n",
+      "Summary: Database Abstraction Library\n",
+      "Home-page: http://www.sqlalchemy.org\n",
+      "Author: Mike Bayer\n",
+      "Author-email: mike_mp@zzzcomputing.com\n",
+      "License: MIT\n",
+      "Location: /opt/conda/lib/python3.7/site-packages\n",
+      "Requires: \n",
+      "Required-by: Flask-SQLAlchemy\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: pandas\n",
+      "Version: 0.25.1\n",
+      "Summary: Powerful data structures for data analysis, time series, and statistics\n",
+      "Home-page: http://pandas.pydata.org\n",
+      "Author: None\n",
+      "Author-email: None\n",
+      "License: BSD\n",
+      "Location: /opt/conda/lib/python3.7/site-packages\n",
+      "Requires: pytz, numpy, python-dateutil\n",
+      "Required-by: vincent, statsmodels, seaborn, plotnine, mizani\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: PyMySQL\n",
+      "Version: 0.9.3\n",
+      "Summary: Pure Python MySQL Driver\n",
+      "Home-page: https://github.com/PyMySQL/PyMySQL/\n",
+      "Author: yutaka.matsubara\n",
+      "Author-email: yutaka.matsubara@gmail.com\n",
+      "License: \"MIT\"\n",
+      "Location: /opt/conda/lib/python3.7/site-packages\n",
+      "Requires: \n",
+      "Required-by: \n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show pymysql"
    ]
   },
   {
