--- a/pandas/pandas_MariaDB.ipynb
+++ b/pandas/pandas_MariaDB.ipynb
@@ -1220,7 +1220,12 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "ename": "InternalError",
@@ -1279,17 +1284,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userid</th>\n",
+       "      <th>userpw</th>\n",
+       "      <th>username</th>\n",
+       "      <th>userage</th>\n",
+       "      <th>usermail</th>\n",
+       "      <th>useradd</th>\n",
+       "      <th>usergender</th>\n",
+       "      <th>usertel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>hong</td>\n",
+       "      <td>8806</td>\n",
+       "      <td>홍길동</td>\n",
+       "      <td>23</td>\n",
+       "      <td></td>\n",
+       "      <td>hong1@gmail.com</td>\n",
+       "      <td>saha</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-1111-2222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>kim</td>\n",
+       "      <td>5438</td>\n",
+       "      <td>김철수</td>\n",
+       "      <td>33</td>\n",
+       "      <td>kim124@gmail.com</td>\n",
+       "      <td>dangni</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-3333-4444</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>lee</td>\n",
+       "      <td>8465</td>\n",
+       "      <td>이지원</td>\n",
+       "      <td>20</td>\n",
+       "      <td>lee7554@gmail.com</td>\n",
+       "      <td>daeti</td>\n",
+       "      <td>female</td>\n",
+       "      <td>010-5463-3245</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      userid  userpw   username             userage         usermail  useradd  \\\n",
+       "hong    8806     홍길동         23                      hong1@gmail.com     saha   \n",
+       "kim     5438     김철수         33    kim124@gmail.com           dangni     male   \n",
+       "lee     8465     이지원         20   lee7554@gmail.com            daeti   female   \n",
+       "\n",
+       "          usergender         usertel  \n",
+       "hong            male   010-1111-2222  \n",
+       "kim    010-3333-4444             NaN  \n",
+       "lee    010-5463-3245             NaN  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userid</th>\n",
+       "      <th>userpw</th>\n",
+       "      <th>username</th>\n",
+       "      <th>userage</th>\n",
+       "      <th>usermail</th>\n",
+       "      <th>useradd</th>\n",
+       "      <th>usergender</th>\n",
+       "      <th>usertel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>gildong1</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>길동</td>\n",
+       "      <td>33</td>\n",
+       "      <td>gildong@gmail.com</td>\n",
+       "      <td>부산시 남구</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-1234-1234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>gildong2</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>길동</td>\n",
+       "      <td>19</td>\n",
+       "      <td>gildong@gmail.com</td>\n",
+       "      <td>부산시 남구</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-1234-1234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>gildong3</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>길동</td>\n",
+       "      <td>18</td>\n",
+       "      <td>gildong@gmail.com</td>\n",
+       "      <td>부산시 남구</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-1234-1234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>gildong4</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>길동</td>\n",
+       "      <td>29</td>\n",
+       "      <td>gildong@gmail.com</td>\n",
+       "      <td>부산시 남구</td>\n",
+       "      <td>male</td>\n",
+       "      <td>010-1234-1234</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     userid userpw username  userage           usermail useradd usergender  \\\n",
+       "0  gildong1   1234       길동       33  gildong@gmail.com  부산시 남구       male   \n",
+       "1  gildong2   1234       길동       19  gildong@gmail.com  부산시 남구       male   \n",
+       "2  gildong3   1234       길동       18  gildong@gmail.com  부산시 남구       male   \n",
+       "3  gildong4   1234       길동       29  gildong@gmail.com  부산시 남구       male   \n",
+       "\n",
+       "         usertel  \n",
+       "0  010-1234-1234  \n",
+       "1  010-1234-1234  \n",
+       "2  010-1234-1234  \n",
+       "3  010-1234-1234  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_sql('users',engine)"
+   ]
   },
   {
    "cell_type": "code",
