--- a/Mat_Plotlib/03_영화정보 csv로 저장하고 차트그리기.ipynb
+++ b/Mat_Plotlib/03_영화정보 csv로 저장하고 차트그리기.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20200404 20200403 20200402 20200401 20200331 20200330 20200329 20200328 20200327 20200326 20200325 20200324 20200323 20200322 20200321 20200320 20200319 20200318 20200317 20200316 20200315 20200314 20200313 20200312 20200311 20200310 20200309 20200308 20200307 20200306 \n",
+      "20200407 20200406 20200405 20200404 20200403 20200402 20200401 20200331 20200330 20200329 20200328 20200327 20200326 20200325 20200324 20200323 20200322 20200321 20200320 20200319 20200318 20200317 20200316 20200315 20200314 20200313 20200312 20200311 20200310 20200309 \n",
       "Index(['rnum', 'rank', 'rankInten', 'rankOldAndNew', 'movieCd', 'movieNm',\n",
       "       'openDt', 'salesAmt', 'salesShare', 'salesInten', 'salesChange',\n",
       "       'salesAcc', 'audiCnt', 'audiInten', 'audiChange', 'audiAcc', 'scrnCnt',\n",
@@ -152,106 +152,106 @@
        "      <td>20205262</td>\n",
        "      <td>엽문4: 더 파이널</td>\n",
        "      <td>2020-04-01</td>\n",
-       "      <td>75121500</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>37409400</td>\n",
-       "      <td>99.2</td>\n",
-       "      <td>199644200</td>\n",
-       "      <td>8288</td>\n",
-       "      <td>4007</td>\n",
-       "      <td>93.6</td>\n",
-       "      <td>23533</td>\n",
-       "      <td>199</td>\n",
-       "      <td>618</td>\n",
-       "      <td>20200404</td>\n",
+       "      <td>20405100</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>-2160900</td>\n",
+       "      <td>-9.6</td>\n",
+       "      <td>311568200</td>\n",
+       "      <td>2472</td>\n",
+       "      <td>-246</td>\n",
+       "      <td>-9.1</td>\n",
+       "      <td>36300</td>\n",
+       "      <td>181</td>\n",
+       "      <td>484</td>\n",
+       "      <td>20200407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>OLD</td>\n",
        "      <td>20192399</td>\n",
        "      <td>1917</td>\n",
        "      <td>2020-02-19</td>\n",
-       "      <td>51816600</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>27695280</td>\n",
-       "      <td>114.8</td>\n",
-       "      <td>6645285440</td>\n",
-       "      <td>5683</td>\n",
-       "      <td>2899</td>\n",
-       "      <td>104.1</td>\n",
-       "      <td>729732</td>\n",
-       "      <td>362</td>\n",
-       "      <td>638</td>\n",
-       "      <td>20200404</td>\n",
+       "      <td>13852600</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>-2481700</td>\n",
+       "      <td>-15.2</td>\n",
+       "      <td>6723376000</td>\n",
+       "      <td>1680</td>\n",
+       "      <td>-227</td>\n",
+       "      <td>-11.9</td>\n",
+       "      <td>738530</td>\n",
+       "      <td>299</td>\n",
+       "      <td>474</td>\n",
+       "      <td>20200407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
        "      <td>OLD</td>\n",
        "      <td>20204107</td>\n",
        "      <td>주디</td>\n",
        "      <td>2020-03-25</td>\n",
-       "      <td>44614800</td>\n",
-       "      <td>11.9</td>\n",
-       "      <td>19833300</td>\n",
-       "      <td>80</td>\n",
-       "      <td>536048320</td>\n",
-       "      <td>5010</td>\n",
-       "      <td>2109</td>\n",
-       "      <td>72.7</td>\n",
-       "      <td>66420</td>\n",
-       "      <td>352</td>\n",
-       "      <td>718</td>\n",
-       "      <td>20200404</td>\n",
+       "      <td>11035360</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-421880</td>\n",
+       "      <td>-3.7</td>\n",
+       "      <td>589936880</td>\n",
+       "      <td>1346</td>\n",
+       "      <td>-66</td>\n",
+       "      <td>-4.7</td>\n",
+       "      <td>72687</td>\n",
+       "      <td>273</td>\n",
+       "      <td>474</td>\n",
+       "      <td>20200407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>OLD</td>\n",
        "      <td>20199842</td>\n",
        "      <td>인비저블맨</td>\n",
        "      <td>2020-02-26</td>\n",
-       "      <td>32247140</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>16899580</td>\n",
-       "      <td>110.1</td>\n",
-       "      <td>4811744180</td>\n",
-       "      <td>3453</td>\n",
-       "      <td>1760</td>\n",
-       "      <td>104</td>\n",
-       "      <td>552161</td>\n",
-       "      <td>280</td>\n",
-       "      <td>497</td>\n",
-       "      <td>20200404</td>\n",
+       "      <td>9539260</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>-1253980</td>\n",
+       "      <td>-11.6</td>\n",
+       "      <td>4860915720</td>\n",
+       "      <td>1123</td>\n",
+       "      <td>-179</td>\n",
+       "      <td>-13.7</td>\n",
+       "      <td>557662</td>\n",
+       "      <td>225</td>\n",
+       "      <td>325</td>\n",
+       "      <td>20200407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>OLD</td>\n",
        "      <td>20206446</td>\n",
        "      <td>n번째 이별 중</td>\n",
        "      <td>2020-04-01</td>\n",
-       "      <td>27768800</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>15020600</td>\n",
-       "      <td>117.8</td>\n",
-       "      <td>69091500</td>\n",
-       "      <td>2906</td>\n",
-       "      <td>1517</td>\n",
-       "      <td>109.2</td>\n",
-       "      <td>7783</td>\n",
-       "      <td>171</td>\n",
-       "      <td>396</td>\n",
-       "      <td>20200404</td>\n",
+       "      <td>9143500</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>-57000</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>111434500</td>\n",
+       "      <td>1085</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>12484</td>\n",
+       "      <td>146</td>\n",
+       "      <td>294</td>\n",
+       "      <td>20200407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -284,18 +284,18 @@
        "      <td>20190864</td>\n",
        "      <td>울프 콜</td>\n",
        "      <td>2020-03-05</td>\n",
-       "      <td>20678080</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>582300</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>50114860</td>\n",
-       "      <td>2420</td>\n",
-       "      <td>-157</td>\n",
-       "      <td>-6.1</td>\n",
-       "      <td>6209</td>\n",
-       "      <td>327</td>\n",
-       "      <td>601</td>\n",
-       "      <td>20200306</td>\n",
+       "      <td>15051800</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>-16207700</td>\n",
+       "      <td>-51.8</td>\n",
+       "      <td>131976820</td>\n",
+       "      <td>1903</td>\n",
+       "      <td>-1679</td>\n",
+       "      <td>-46.9</td>\n",
+       "      <td>15817</td>\n",
+       "      <td>295</td>\n",
+       "      <td>481</td>\n",
+       "      <td>20200309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>296</td>\n",
@@ -303,87 +303,87 @@
        "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>OLD</td>\n",
-       "      <td>20040598</td>\n",
-       "      <td>해리포터와 아즈카반의 죄수</td>\n",
-       "      <td>2004-07-16</td>\n",
-       "      <td>24548500</td>\n",
-       "      <td>4.1</td>\n",
-       "      <td>5203000</td>\n",
-       "      <td>26.9</td>\n",
-       "      <td>11304048500</td>\n",
-       "      <td>2412</td>\n",
-       "      <td>175</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>1817385</td>\n",
-       "      <td>45</td>\n",
-       "      <td>180</td>\n",
-       "      <td>20200306</td>\n",
+       "      <td>20135428</td>\n",
+       "      <td>어바웃 타임</td>\n",
+       "      <td>2013-12-05</td>\n",
+       "      <td>9580500</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>-6210500</td>\n",
+       "      <td>-39.3</td>\n",
+       "      <td>25146392300</td>\n",
+       "      <td>1897</td>\n",
+       "      <td>-1238</td>\n",
+       "      <td>-39.5</td>\n",
+       "      <td>3420340</td>\n",
+       "      <td>126</td>\n",
+       "      <td>198</td>\n",
+       "      <td>20200309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>297</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
-       "      <td>-4</td>\n",
+       "      <td>2</td>\n",
        "      <td>OLD</td>\n",
-       "      <td>20204681</td>\n",
-       "      <td>더 보이 2: 돌아온 브람스</td>\n",
-       "      <td>2020-03-05</td>\n",
-       "      <td>22696000</td>\n",
+       "      <td>20040598</td>\n",
+       "      <td>해리포터와 아즈카반의 죄수</td>\n",
+       "      <td>2004-07-16</td>\n",
+       "      <td>15266000</td>\n",
        "      <td>3.8</td>\n",
-       "      <td>-12743000</td>\n",
-       "      <td>-36</td>\n",
-       "      <td>58135000</td>\n",
-       "      <td>2409</td>\n",
-       "      <td>-2215</td>\n",
-       "      <td>-47.9</td>\n",
-       "      <td>7033</td>\n",
-       "      <td>163</td>\n",
-       "      <td>437</td>\n",
-       "      <td>20200306</td>\n",
+       "      <td>-13947000</td>\n",
+       "      <td>-47.7</td>\n",
+       "      <td>11385207500</td>\n",
+       "      <td>1757</td>\n",
+       "      <td>-1149</td>\n",
+       "      <td>-39.5</td>\n",
+       "      <td>1825622</td>\n",
+       "      <td>43</td>\n",
+       "      <td>158</td>\n",
+       "      <td>20200309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>298</td>\n",
        "      <td>9</td>\n",
        "      <td>9</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-3</td>\n",
        "      <td>OLD</td>\n",
-       "      <td>20135428</td>\n",
-       "      <td>어바웃 타임</td>\n",
-       "      <td>2013-12-05</td>\n",
-       "      <td>11196000</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>1152500</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>25103315800</td>\n",
-       "      <td>2236</td>\n",
-       "      <td>240</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3411796</td>\n",
-       "      <td>127</td>\n",
-       "      <td>215</td>\n",
-       "      <td>20200306</td>\n",
+       "      <td>20204681</td>\n",
+       "      <td>더 보이 2: 돌아온 브람스</td>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>12745000</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>-23413000</td>\n",
+       "      <td>-64.8</td>\n",
+       "      <td>145792500</td>\n",
+       "      <td>1489</td>\n",
+       "      <td>-2168</td>\n",
+       "      <td>-59.3</td>\n",
+       "      <td>16270</td>\n",
+       "      <td>153</td>\n",
+       "      <td>313</td>\n",
+       "      <td>20200309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>299</td>\n",
        "      <td>10</td>\n",
        "      <td>10</td>\n",
-       "      <td>0</td>\n",
+       "      <td>15</td>\n",
        "      <td>OLD</td>\n",
-       "      <td>20193526</td>\n",
-       "      <td>젠틀맨</td>\n",
-       "      <td>2020-02-26</td>\n",
-       "      <td>18360620</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>2718700</td>\n",
-       "      <td>17.4</td>\n",
-       "      <td>514052550</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>136</td>\n",
-       "      <td>7.2</td>\n",
-       "      <td>64425</td>\n",
-       "      <td>289</td>\n",
-       "      <td>438</td>\n",
-       "      <td>20200306</td>\n",
+       "      <td>20205529</td>\n",
+       "      <td>그링고</td>\n",
+       "      <td>2020-03-05</td>\n",
+       "      <td>6728000</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>5207000</td>\n",
+       "      <td>342.3</td>\n",
+       "      <td>25015500</td>\n",
+       "      <td>1291</td>\n",
+       "      <td>1113</td>\n",
+       "      <td>625.3</td>\n",
+       "      <td>4430</td>\n",
+       "      <td>32</td>\n",
+       "      <td>47</td>\n",
+       "      <td>20200309</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -393,47 +393,47 @@
       "text/plain": [
        "    rnum rank rankInten rankOldAndNew   movieCd           movieNm      openDt  \\\n",
        "0      1    1         0           OLD  20205262        엽문4: 더 파이널  2020-04-01   \n",
-       "1      2    2         1           OLD  20192399              1917  2020-02-19   \n",
-       "2      3    3        -1           OLD  20204107                주디  2020-03-25   \n",
-       "3      4    4         1           OLD  20199842             인비저블맨  2020-02-26   \n",
-       "4      5    5         1           OLD  20206446          n번째 이별 중  2020-04-01   \n",
+       "1      2    2         0           OLD  20192399              1917  2020-02-19   \n",
+       "2      3    3         0           OLD  20204107                주디  2020-03-25   \n",
+       "3      4    4         0           OLD  20199842             인비저블맨  2020-02-26   \n",
+       "4      5    5         0           OLD  20206446          n번째 이별 중  2020-04-01   \n",
        "..   ...  ...       ...           ...       ...               ...         ...   \n",
        "295    6    6         1           OLD  20190864              울프 콜  2020-03-05   \n",
-       "296    7    7         1           OLD  20040598    해리포터와 아즈카반의 죄수  2004-07-16   \n",
-       "297    8    8        -4           OLD  20204681  더 보이 2: 돌아온 브람스   2020-03-05   \n",
-       "298    9    9         0           OLD  20135428            어바웃 타임  2013-12-05   \n",
-       "299   10   10         0           OLD  20193526               젠틀맨  2020-02-26   \n",
+       "296    7    7         1           OLD  20135428            어바웃 타임  2013-12-05   \n",
+       "297    8    8         2           OLD  20040598    해리포터와 아즈카반의 죄수  2004-07-16   \n",
+       "298    9    9        -3           OLD  20204681  더 보이 2: 돌아온 브람스   2020-03-05   \n",
+       "299   10   10        15           OLD  20205529               그링고  2020-03-05   \n",
        "\n",
        "     salesAmt salesShare salesInten salesChange     salesAcc audiCnt  \\\n",
-       "0    75121500       20.0   37409400        99.2    199644200    8288   \n",
-       "1    51816600       13.8   27695280       114.8   6645285440    5683   \n",
-       "2    44614800       11.9   19833300          80    536048320    5010   \n",
-       "3    32247140        8.6   16899580       110.1   4811744180    3453   \n",
-       "4    27768800        7.4   15020600       117.8     69091500    2906   \n",
+       "0    20405100       16.7   -2160900        -9.6    311568200    2472   \n",
+       "1    13852600       11.3   -2481700       -15.2   6723376000    1680   \n",
+       "2    11035360        9.0    -421880        -3.7    589936880    1346   \n",
+       "3     9539260        7.8   -1253980       -11.6   4860915720    1123   \n",
+       "4     9143500        7.5     -57000        -0.6    111434500    1085   \n",
        "..        ...        ...        ...         ...          ...     ...   \n",
-       "295  20678080        3.5     582300         2.9     50114860    2420   \n",
-       "296  24548500        4.1    5203000        26.9  11304048500    2412   \n",
-       "297  22696000        3.8  -12743000         -36     58135000    2409   \n",
-       "298  11196000        1.9    1152500        11.5  25103315800    2236   \n",
-       "299  18360620        3.1    2718700        17.4    514052550    2022   \n",
+       "295  15051800        3.7  -16207700       -51.8    131976820    1903   \n",
+       "296   9580500        2.4   -6210500       -39.3  25146392300    1897   \n",
+       "297  15266000        3.8  -13947000       -47.7  11385207500    1757   \n",
+       "298  12745000        3.1  -23413000       -64.8    145792500    1489   \n",
+       "299   6728000        1.7    5207000       342.3     25015500    1291   \n",
        "\n",
        "    audiInten audiChange  audiAcc scrnCnt showCnt  targetDt  \n",
-       "0        4007       93.6    23533     199     618  20200404  \n",
-       "1        2899      104.1   729732     362     638  20200404  \n",
-       "2        2109       72.7    66420     352     718  20200404  \n",
-       "3        1760        104   552161     280     497  20200404  \n",
-       "4        1517      109.2     7783     171     396  20200404  \n",
+       "0        -246       -9.1    36300     181     484  20200407  \n",
+       "1        -227      -11.9   738530     299     474  20200407  \n",
+       "2         -66       -4.7    72687     273     474  20200407  \n",
+       "3        -179      -13.7   557662     225     325  20200407  \n",
+       "4         -11         -1    12484     146     294  20200407  \n",
        "..        ...        ...      ...     ...     ...       ...  \n",
-       "295      -157       -6.1     6209     327     601  20200306  \n",
-       "296       175        7.8  1817385      45     180  20200306  \n",
-       "297     -2215      -47.9     7033     163     437  20200306  \n",
-       "298       240         12  3411796     127     215  20200306  \n",
-       "299       136        7.2    64425     289     438  20200306  \n",
+       "295     -1679      -46.9    15817     295     481  20200309  \n",
+       "296     -1238      -39.5  3420340     126     198  20200309  \n",
+       "297     -1149      -39.5  1825622      43     158  20200309  \n",
+       "298     -2168      -59.3    16270     153     313  20200309  \n",
+       "299      1113      625.3     4430      32      47  20200309  \n",
        "\n",
        "[300 rows x 19 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
